# Proovability

Provability-main/Provability-main/: .gitignore  Anchor.toml  client.ts  index.html  package-lock.json  package.json  tailwind.config.ts
Provability-main/Provability-main/backend/zkml/: Cargo.toml  README.md  deploy.sh  z7vFZVAXE25w1RhEDD2qgjZVvQrKgZiL9GhTwFCYETi.json
Provability-main/Provability-main/backend/zkml/contracts/programs/zkml/: Cargo.toml
Provability-main/Provability-main/backend/zkml/contracts/programs/zkml/src/: lib.rs
Provability-main/Provability-main/backend/zkml/script/: Cargo.toml
Provability-main/Provability-main/backend/zkml/script/src/: main.rs
Provability-main/Provability-main/frontend/: package-lock.json
Provability-main/Provability-main/programs/bounty_escrow/: Cargo.toml
Provability-main/Provability-main/src/: App.tsx  index.css
Provability-main/Provability-main/src/app/: not-found.tsx  providers.tsx
Provability-main/Provability-main/src/components/: BountiesSection.tsx  BountyCard.tsx  DropField.tsx  Header.tsx  Hero.tsx  TrainingDataViewer.tsx
Provability-main/Provability-main/src/hooks/: useAuth.ts  useTypewriter.ts
Provability-main/Provability-main/src/lib/: supabaseServer.ts  uploadModel.ts
Provability-main/Provability-main/src/pages/: Bounties.tsx  CreateBounty.tsx  Index.tsx  ModelSubmissions.tsx
Provability-main/Provability-main/src/services/: modalService.ts
Provability-main/Provability-main/supabase/: config.toml
Provability-main/Provability-main/tests/: bounty_escrow.ts
(+14 files in other folders)
