[package]
version = "0.1.0"
name = "treehacks-zkml-script"
edition = "2021"

[dependencies]
# SP1 SDK to generate proofs
sp1-sdk = { version = "3.4.0", features = ["network"] }
# Use vendored OpenSSL to avoid system dependency issues
openssl = { version = "0.10", features = ["vendored"] }

# Solana Interaction - Updated to 2.0 for compatibility with modern dependencies
solana-client = "2.0"
solana-sdk = "2.0"
solana-program = "2.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] } # Needed for async
dotenv = "0.15" 
anyhow = "1.0"